@@ -1,4 +1,4 @@
-# @(#)asia	8.62
+# @(#)asia	8.64
 # This file is in the public domain, so clarified as of
 # 2009-05-17 by Arthur David Olson.
 
