@@ -1,5 +1,5 @@
 # <pre>
-# @(#)europe	8.28
+# @(#)europe	8.31
 # This file is in the public domain, so clarified as of
 # 2009-05-17 by Arthur David Olson.
 
