@@ -1,5 +1,5 @@
 # <pre>
-# @(#)zone.tab	8.41
+# @(#)zone.tab	8.43
 # This file is in the public domain, so clarified as of
 # 2009-05-17 by Arthur David Olson.
 #
